--- a/data_reformat.ipynb
+++ b/data_reformat.ipynb
@@ -17,7 +17,8 @@
     "import pandas as pd\n",
     "from utils import Timer\n",
     "from joblib import Parallel, delayed\n",
-    "\n",
+    "import gpxpy\n",
+    "from gcj2wgs import gcj02_to_wgs84 as gcj2wgs\n",
     "timer = Timer()"
    ],
    "metadata": {
@@ -82,24 +83,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "def to_gpx(file_path):\n",
+    "    timer.tik(\"read\")\n",
+    "    df = pd.DataFrame(pd.read_csv(file_path, header=None))\n",
+    "    df.columns = ['name', 'order_id', 'time', 'lon', 'lat']  # lon经度 lat纬度\n",
+    "    timer.tok()\n",
+    "    gpx = gpxpy.gpx.GPX()\n",
+    "    gpx_track = gpxpy.gpx.GPXTrack()\n",
+    "    gpx.tracks.append(gpx_track)\n",
+    "    timer.tik(\"group\")\n",
+    "    for name, group in df.groupby(\"order_id\"):\n",
+    "        gpx_segment = gpxpy.gpx.GPXTrackSegment()\n",
+    "        gpx_track.segments.append(gpx_segment)\n",
+    "        for index, row in group.iterrows():\n",
+    "            wgs = gcj2wgs(row['lon'], row['lat'])\n",
+    "            gpx_segment.points.append(gpxpy.gpx.GPXTrackPoint(wgs[0],wgs[1]))\n",
+    "    timer.tok()\n",
+    "    timer.tik(\"to xml\")\n",
+    "    gpx.to_xml()\n",
+    "    timer.tok()\n",
+    "    timer.tik(\"write\")\n",
+    "    filename = f\"{file_path}.gpx\"\n",
+    "    f = open(filename, \"w\")\n",
+    "    f.writelines(gpx.to_xml())\n",
+    "    f.close()\n",
+    "    timer.tok()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "read start\n",
-      "read done:1.1561s\n",
-      "group-apply start\n",
-      "group-apply done:13.5368s\n",
-      "剩4142/5650条，筛掉27%\n",
-      "done\n",
-      "\n"
+      "read done, 0.095s after read start\n",
+      "group start\n",
+      "group done, 5.519s after group start\n",
+      "to xml start\n",
+      "to xml done, 1.098s after to xml start\n",
+      "write start\n",
+      "write done, 2.926s after write start\n"
      ]
     }
    ],
    "source": [
-    "data_reformat(\"data/1m_gps_20161101\")\n",
+    "# data_reformat(\"data/1m_gps_20161101\")\n",
+    "to_gpx(\"data/100k_gps_20161101\")\n",
     "# for i in range(16, 31):\n",
     "#     day = str(i).zfill(2)\n",
     "#     print(\"day:{}\".format(day))\n",
