--- a/test.ipynb
+++ b/test.ipynb
@@ -10,13 +10,19 @@
    "source": [
     "import numpy as np\n",
     "import torch\n",
-    "from cell2vec import *\n",
+    "from grid2vec import *\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -34,22 +40,16 @@
     "    f.close()\n",
     "cell2idx = {eval(c): str_cell2idx[c] for c in list(str_cell2idx)}\n",
     "\n",
-    "dataset = CellEmbeddingDataset(cell2idx, window_size=20, neg_rate=100)\n",
-    "model = Cell2Vec(len(dataset), 256)\n",
+    "dataset = GridEmbeddingDataset(cell2idx, window_size=20, neg_rate=100)\n",
+    "model = Grid2Vec(len(dataset), 256)\n",
     "cp = torch.load('model/checkpoint_256_299_0_0.694.pth')\n",
     "model.load_state_dict(cp['model'])\n",
     "weight2 = np.load(\"model/cell_embedding_256_0.8.npy\")\n",
     "weight3 = np.load(\"model/cell_embedding_384_0.73.npy\")\n",
-    "print(evaluate_cell2vec(model.input_embedding(), dataset, test_num=500))\n",
-    "print(evaluate_cell2vec(weight2, dataset, test_num=500))\n",
-    "print(evaluate_cell2vec(weight3, dataset, test_num=500))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "print(evaluate_grid2vec(model.input_embedding(), dataset, test_num=500))\n",
+    "print(evaluate_grid2vec(weight2, dataset, test_num=500))\n",
+    "print(evaluate_grid2vec(weight3, dataset, test_num=500))"
+   ]
   }
  ],
  "metadata": {
