--- a/data_reformat.ipynb
+++ b/data_reformat.ipynb
@@ -2,58 +2,72 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "用于对原始数据做基本的筛选和格式化"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "用于对原始数据做基本的筛选和格式化"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from utils import Timer\n",
-    "from joblib import Parallel, delayed\n",
-    "import gpxpy\n",
-    "from gcj2wgs import gcj02_to_wgs84 as gcj2wgs\n",
-    "timer = Timer()"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from utils import Timer\n",
+    "from joblib import Parallel, delayed\n",
+    "from gcj2wgs import gcj02_to_wgs84 as gcj2wgs\n",
+    "\n",
+    "timer = Timer()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
+    "\n",
     "def data_reformat(file_path):\n",
     "    timer.tik(\"read\")\n",
     "    df = pd.DataFrame(pd.read_csv(file_path, header=None))\n",
-    "    df.columns = ['name', 'order_id', 'time', 'lon', 'lat']  # lon经度 lat纬度\n",
+    "    df.columns = [\"name\", \"order_id\", \"time\", \"lon\", \"lat\"]  # lon经度 lat纬度\n",
     "    timer.tok()\n",
     "\n",
     "    def group_concat(name, x: pd.DataFrame):\n",
-    "        traj_str = \"\"\n",
+    "        traj_str = \"[\"\n",
     "        for index, row in x.iterrows():\n",
-    "            traj_str += \"({} {}),\".format(row['lon'], row['lat'])\n",
+    "            traj_str += \"({} {}),\".format(row[\"lon\"], row[\"lat\"])\n",
     "        traj_str = traj_str[:-1]\n",
-    "        series = pd.Series({'order_id': name,\n",
-    "                            'traj': traj_str,\n",
-    "                            'len': len(x),\n",
-    "                            \"max_time_diff\": x['time'].diff().max(),\n",
-    "                            'max_lon_diff': x['lon'].diff().max(),\n",
-    "                            'max_lat_diff': x['lat'].diff().max()})\n",
+    "        traj_str += \"]\"\n",
+    "        series = pd.Series(\n",
+    "            {\n",
+    "                \"order_id\": name,\n",
+    "                \"traj\": traj_str,\n",
+    "                \"len\": len(x),\n",
+    "                \"max_time_diff\": x[\"time\"].diff().max(),\n",
+    "                \"max_lon_diff\": x[\"lon\"].diff().max(),\n",
+    "                \"max_lat_diff\": x[\"lat\"].diff().max(),\n",
+    "            }\n",
+    "        )\n",
     "        return series\n",
     "\n",
     "    def applyParallel(df_groups, func, n=6):\n",
-    "        res = Parallel(n_jobs=n)(delayed(func)(name, group) for name, group in df_groups)\n",
+    "        res = Parallel(n_jobs=n)(\n",
+    "            delayed(func)(name, group) for name, group in df_groups\n",
+    "        )\n",
     "        return pd.DataFrame(res)\n",
     "\n",
     "    # group-apply\n",
@@ -64,107 +78,50 @@
     "    # filter\n",
     "    t_diff_limit = 20\n",
     "    lon_lat_diff_limit = 0.005\n",
-    "    f_group = group_df[(group_df['max_time_diff'] < t_diff_limit) & (\n",
-    "            group_df['max_lon_diff'] + group_df['max_lat_diff'] < lon_lat_diff_limit)]\n",
-    "    f_group = f_group[['order_id', 'traj', 'len']]\n",
-    "    f_group = f_group.set_index('order_id')\n",
-    "    print(\"剩{}/{}条，筛掉{}%\".format(len(f_group), len(group_df), round(100 - 100 * len(f_group) / len(group_df))))\n",
+    "    f_group = group_df[\n",
+    "        (group_df[\"max_time_diff\"] < t_diff_limit)\n",
+    "        & (group_df[\"max_lon_diff\"] + group_df[\"max_lat_diff\"] < lon_lat_diff_limit)\n",
+    "    ]\n",
+    "    f_group = f_group[[\"order_id\", \"traj\"]]\n",
+    "    f_group = f_group.set_index(\"order_id\")\n",
+    "    print(\n",
+    "        \"剩{}/{}条，筛掉{}%\".format(\n",
+    "            len(f_group), len(group_df), round(100 - 100 * len(f_group) / len(group_df))\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "    # save\n",
     "    f_group.to_csv(file_path + \"_format\")\n",
-    "    print(\"done\\n\")"
-   ],
+    "    print(\"all done\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "def to_gpx(file_path):\n",
-    "    timer.tik(\"read\")\n",
-    "    df = pd.DataFrame(pd.read_csv(file_path, header=None))\n",
-    "    df.columns = ['name', 'order_id', 'time', 'lon', 'lat']  # lon经度 lat纬度\n",
-    "    timer.tok()\n",
-    "    gpx = gpxpy.gpx.GPX()\n",
-    "    gpx_track = gpxpy.gpx.GPXTrack()\n",
-    "    gpx.tracks.append(gpx_track)\n",
-    "    timer.tik(\"group\")\n",
-    "    for name, group in df.groupby(\"order_id\"):\n",
-    "        gpx_segment = gpxpy.gpx.GPXTrackSegment()\n",
-    "        gpx_track.segments.append(gpx_segment)\n",
-    "        for index, row in group.iterrows():\n",
-    "            wgs = gcj2wgs(row['lon'], row['lat'])\n",
-    "            gpx_segment.points.append(gpxpy.gpx.GPXTrackPoint(wgs[0],wgs[1]))\n",
-    "    timer.tok()\n",
-    "    timer.tik(\"to xml\")\n",
-    "    gpx.to_xml()\n",
-    "    timer.tok()\n",
-    "    timer.tik(\"write\")\n",
-    "    filename = f\"{file_path}.gpx\"\n",
-    "    f = open(filename, \"w\")\n",
-    "    f.writelines(gpx.to_xml())\n",
-    "    f.close()\n",
-    "    timer.tok()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "read start\n",
-      "read done, 0.095s after read start\n",
-      "group start\n",
-      "group done, 5.519s after group start\n",
-      "to xml start\n",
-      "to xml done, 1.098s after to xml start\n",
-      "write start\n",
-      "write done, 2.926s after write start\n"
+      "read done, 0.091s after read start\n",
+      "group-apply start\n",
+      "group-apply done, 0.918s after group-apply start\n",
+      "剩428/574条，筛掉25%\n",
+      "all done\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# data_reformat(\"data/1m_gps_20161101\")\n",
-    "to_gpx(\"data/100k_gps_20161101\")\n",
-    "# for i in range(16, 31):\n",
-    "#     day = str(i).zfill(2)\n",
-    "#     print(\"day:{}\".format(day))\n",
-    "#     file_path = r'data/cxwang@mail.xjtu.edu.cn_201611{}/gps_201611{}'.format(day, day)\n",
-    "#     data_reformat(file_path)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "data_reformat(\"data/100k_gps_20161101\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -176,14 +133,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
