--- a/test.ipynb
+++ b/test.ipynb
@@ -117,6 +117,271 @@
     "array = np.array(traj)[idx]\n",
     "array"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.2488, 1.5787, 1.1060, 1.1264, 1.7566],\n",
+      "        [1.4038, 1.4460, 1.1559, 1.9803, 1.6719],\n",
+      "        [1.6371, 1.3880, 1.3009, 1.6942, 1.7834],\n",
+      "        [1.2229, 1.9669, 1.4990, 1.0187, 1.5576],\n",
+      "        [1.3838, 1.6400, 1.8443, 1.7607, 1.4661]])\n",
+      "tensor([[0.1723, 0.2396, 0.1494, 0.1524, 0.2863],\n",
+      "        [0.1692, 0.1765, 0.1320, 0.3011, 0.2212],\n",
+      "        [0.2123, 0.1655, 0.1517, 0.2248, 0.2457],\n",
+      "        [0.1507, 0.3172, 0.1986, 0.1229, 0.2106],\n",
+      "        [0.1558, 0.2012, 0.2468, 0.2271, 0.1691]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2152, 0.3783, 0.1652, 0.1717, 0.5029],\n",
+       "        [0.2375, 0.2552, 0.1526, 0.5963, 0.3698],\n",
+       "        [0.3476, 0.2297, 0.1973, 0.3808, 0.4383],\n",
+       "        [0.1843, 0.6238, 0.2978, 0.1252, 0.3280],\n",
+       "        [0.2155, 0.3300, 0.4553, 0.3998, 0.2479]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "m = torch.ones((5,5))\n",
+    "e = torch.rand((5,5))\n",
+    "m.add_(e)\n",
+    "print(m)\n",
+    "sm = torch.softmax(m,dim=1)\n",
+    "print(sm)\n",
+    "torch.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "import numpy as np\n",
+    "from metric import *\n",
+    "import traj_dist.distance as tdist\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "random.seed(19991014)\n",
+    "file_train = \"data/100k_gps_20161101_reformat.json\"\n",
+    "json_obj = json.load(open(file_train))\n",
+    "origin_trajs = list(json_obj['origin_traj'].values())\n",
+    "N = 5\n",
+    "eps = 21.11\n",
+    "metric_types=['lcss','edr','erp','frechet','discret_frechet','hausdorff','dtw']\n",
+    "trajs_N = origin_trajs[-3:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>self</th>\n",
+       "      <th>contort</th>\n",
+       "      <th>down_sample</th>\n",
+       "      <th>contort_dsp</th>\n",
+       "      <th>other1</th>\n",
+       "      <th>other2</th>\n",
+       "      <th>other3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.397321</td>\n",
+       "      <td>0.383929</td>\n",
+       "      <td>0.566964</td>\n",
+       "      <td>0.209821</td>\n",
+       "      <td>0.049107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.472441</td>\n",
+       "      <td>0.783333</td>\n",
+       "      <td>0.183333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.347222</td>\n",
+       "      <td>0.511811</td>\n",
+       "      <td>0.652778</td>\n",
+       "      <td>0.152778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.370787</td>\n",
+       "      <td>0.382022</td>\n",
+       "      <td>0.700787</td>\n",
+       "      <td>0.528090</td>\n",
+       "      <td>0.123596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.421569</td>\n",
+       "      <td>0.421569</td>\n",
+       "      <td>0.622549</td>\n",
+       "      <td>0.230392</td>\n",
+       "      <td>0.053922</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   self  contort  down_sample  contort_dsp    other1    other2    other3\n",
+       "0   0.0      0.0     0.397321     0.383929  0.566964  0.209821  0.049107\n",
+       "1   0.0      0.0     0.400000     0.400000  0.472441  0.783333  0.183333\n",
+       "2   0.0      0.0     0.333333     0.347222  0.511811  0.652778  0.152778\n",
+       "3   0.0      0.0     0.370787     0.382022  0.700787  0.528090  0.123596\n",
+       "4   0.0      0.0     0.421569     0.421569  0.622549  0.230392  0.053922"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(columns=['self','contort','down_sample','contort_dsp','other1','other2','other3'])\n",
+    "for i in range(N):\n",
+    "    traj = np.array(origin_trajs[i])\n",
+    "    contort = traj + (np.random.rand(traj.shape[0], 2) * 2 - 1) * 0.0001\n",
+    "    idx = [0] + sorted(random.sample(range(1, traj.shape[0] - 1), traj.shape[0] // 2)) + [traj.shape[0] - 1]\n",
+    "    down_sample = traj[idx]\n",
+    "    contort_dsp = contort[idx]\n",
+    "\n",
+    "    new = pd.Series({'self':tdist.edr(traj, traj, type_d='spherical', eps=eps),\n",
+    "                    'contort':tdist.edr(traj, contort, type_d='spherical', eps=eps),\n",
+    "                    'down_sample':tdist.edr(traj, down_sample, type_d='spherical', eps=eps),\n",
+    "                    'contort_dsp':tdist.edr(traj, contort_dsp, type_d='spherical', eps=eps),\n",
+    "                    'other1':tdist.edr(traj, np.array(trajs_N[0]), type_d='spherical', eps=eps),\n",
+    "                    'other2':tdist.edr(traj, np.array(trajs_N[1]), type_d='spherical', eps=eps),\n",
+    "                    'other3':tdist.edr(traj, np.array(trajs_N[2]), type_d='spherical', eps=eps)})\n",
+    "    df = df.append(new, ignore_index=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch \n",
+    "\n",
+    "t = torch.tensor(0.5)\n",
+    "\n",
+    "class model(torch.nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(model, self).__init__()\n",
+    "        self.t = torch.nn.Linear(1,1)\n",
+    "        # self.t = torch.tensor(0.5)\n",
+    "    def forward(self, x):\n",
+    "        return x * t\n",
+    "\n",
+    "m = model()\n",
+    "for p in m.parameters():\n",
+    "    print(p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.6336, 0.7072, 0.1153, 0.5110],\n",
+      "        [0.4161, 0.6989, 0.9768, 0.6424]])\n",
+      "torch.Size([2, 3, 4])\n",
+      "tensor([[[0.6336, 0.7072, 0.1153, 0.5110],\n",
+      "         [0.6336, 0.7072, 0.1153, 0.5110],\n",
+      "         [0.6336, 0.7072, 0.1153, 0.5110]],\n",
+      "\n",
+      "        [[0.4161, 0.6989, 0.9768, 0.6424],\n",
+      "         [0.4161, 0.6989, 0.9768, 0.6424],\n",
+      "         [0.4161, 0.6989, 0.9768, 0.6424]]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6336, 0.7072, 0.1153, 0.5110],\n",
+       "        [0.4161, 0.6989, 0.9768, 0.6424]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "t = torch.rand(2,4)\n",
+    "print(t)\n",
+    "t = t.unsqueeze(1).repeat(1,3,1)\n",
+    "print(t.shape)\n",
+    "print(t)\n",
+    "weight = torch.softmax(torch.ones(3) / torch.arange(1, 3 + 1).float(), dim=0)\n",
+    "output = torch.einsum('bte, t -> be', t, weight)\n",
+    "output"
+   ]
   }
  ],
  "metadata": {
