parallel calculate distance

--- a/test.ipynb
+++ b/test.ipynb
@@ -339,37 +339,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.6336, 0.7072, 0.1153, 0.5110],\n",
-      "        [0.4161, 0.6989, 0.9768, 0.6424]])\n",
-      "torch.Size([2, 3, 4])\n",
-      "tensor([[[0.6336, 0.7072, 0.1153, 0.5110],\n",
-      "         [0.6336, 0.7072, 0.1153, 0.5110],\n",
-      "         [0.6336, 0.7072, 0.1153, 0.5110]],\n",
-      "\n",
-      "        [[0.4161, 0.6989, 0.9768, 0.6424],\n",
-      "         [0.4161, 0.6989, 0.9768, 0.6424],\n",
-      "         [0.4161, 0.6989, 0.9768, 0.6424]]])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0.6336, 0.7072, 0.1153, 0.5110],\n",
-       "        [0.4161, 0.6989, 0.9768, 0.6424]])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
@@ -381,6 +353,42 @@
     "weight = torch.softmax(torch.ones(3) / torch.arange(1, 3 + 1).float(), dim=0)\n",
     "output = torch.einsum('bte, t -> be', t, weight)\n",
     "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.61071852 0.23923387 0.04547814 0.6693531 ]\n",
+      " [0.98625028 0.03566168 0.13128401 0.12064958]\n",
+      " [0.88039305 0.09013327 0.29991841 0.92430453]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 1, 0, 3],\n",
+       "       [1, 3, 2, 0],\n",
+       "       [1, 2, 0, 3]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "dis_matrix = np.random.rand(3,4)\n",
+    "print(dis_matrix)\n",
+    "si = np.argsort(dis_matrix, axis=1)\n",
+    "si"
    ]
   }
  ],
