--- a/test.ipynb
+++ b/test.ipynb
@@ -2,16 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "from grid2vec import *\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=float64)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([])"
    ]
   },
   {
@@ -168,14 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import random\n",
     "import numpy as np\n",
-    "from metric import *\n",
     "import traj_dist.distance as tdist\n",
     "import pandas as pd\n",
     "\n",
@@ -192,106 +209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>self</th>\n",
-       "      <th>contort</th>\n",
-       "      <th>down_sample</th>\n",
-       "      <th>contort_dsp</th>\n",
-       "      <th>other1</th>\n",
-       "      <th>other2</th>\n",
-       "      <th>other3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.397321</td>\n",
-       "      <td>0.383929</td>\n",
-       "      <td>0.566964</td>\n",
-       "      <td>0.209821</td>\n",
-       "      <td>0.049107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.472441</td>\n",
-       "      <td>0.783333</td>\n",
-       "      <td>0.183333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.347222</td>\n",
-       "      <td>0.511811</td>\n",
-       "      <td>0.652778</td>\n",
-       "      <td>0.152778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.370787</td>\n",
-       "      <td>0.382022</td>\n",
-       "      <td>0.700787</td>\n",
-       "      <td>0.528090</td>\n",
-       "      <td>0.123596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.421569</td>\n",
-       "      <td>0.421569</td>\n",
-       "      <td>0.622549</td>\n",
-       "      <td>0.230392</td>\n",
-       "      <td>0.053922</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   self  contort  down_sample  contort_dsp    other1    other2    other3\n",
-       "0   0.0      0.0     0.397321     0.383929  0.566964  0.209821  0.049107\n",
-       "1   0.0      0.0     0.400000     0.400000  0.472441  0.783333  0.183333\n",
-       "2   0.0      0.0     0.333333     0.347222  0.511811  0.652778  0.152778\n",
-       "3   0.0      0.0     0.370787     0.382022  0.700787  0.528090  0.123596\n",
-       "4   0.0      0.0     0.421569     0.421569  0.622549  0.230392  0.053922"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/yqguo/coding/Trajectory/test.ipynb Cell 8'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B251/home/yqguo/coding/Trajectory/test.ipynb#ch0000007vscode-remote?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(columns\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mself\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mcontort\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mdown_sample\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mcontort_dsp\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mother1\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mother2\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mother3\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B251/home/yqguo/coding/Trajectory/test.ipynb#ch0000007vscode-remote?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(N):\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B251/home/yqguo/coding/Trajectory/test.ipynb#ch0000007vscode-remote?line=2'>3</a>\u001b[0m     traj \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(origin_trajs[i])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -357,38 +287,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.61071852 0.23923387 0.04547814 0.6693531 ]\n",
-      " [0.98625028 0.03566168 0.13128401 0.12064958]\n",
-      " [0.88039305 0.09013327 0.29991841 0.92430453]]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[2, 1, 0, 3],\n",
-       "       [1, 3, 2, 0],\n",
-       "       [1, 2, 0, 3]])"
+       "0.00029125044420566987"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import math \n",
     "\n",
-    "dis_matrix = np.random.rand(3,4)\n",
-    "print(dis_matrix)\n",
-    "si = np.argsort(dis_matrix, axis=1)\n",
-    "si"
+    "math.sqrt((0.0002203750**2 + 0.0001904250**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diff1:0.0004209801355290295\n",
+      "diff2:1.3911618431187805e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import numpy as np\n",
+    "import traj_dist.distance as tdist\n",
+    "\n",
+    "\n",
+    "sp21 = json.load(open(\"data/100k_gps_20161101_reformat_distance_sp21.json\"))\n",
+    "sp30 = json.load(open(\"data/100k_gps_20161101_reformat_dis_matrix_sp30.json\"))\n",
+    "eu00029 = json.load(open(\"data/100k_gps_20161101_reformat_dis_matrix_eps0.00029.json\"))\n",
+    "\n",
+    "diff1 = np.mean(np.array(sp21['dis_matrix'])-np.array(eu00029['dis_matrix']))\n",
+    "diff2 = np.mean(np.array(sp30['dis_matrix'])-np.array(eu00029['dis_matrix']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prepare data start\n",
+      "prepare data done, 15.369s after prepare data start\n"
+     ]
+    }
+   ],
+   "source": [
+    "from t3s import *\n",
+    "\n",
+    "\n",
+    "timer.tik(\"prepare data\")\n",
+    "dataset_dir = \"/home/yqguo/coding/Trajectory/data/\"\n",
+    "str_grid2idx = json.load(open(dataset_dir + \"str_grid2idx_400.json\"))\n",
+    "grid2idx = {eval(c): str_grid2idx[c] for c in list(str_grid2idx)}\n",
+    "dataset = MetricLearningDataset(dataset_dir + \"1m_gps_20161101_info.json\", grid2idx)\n",
+    "dataloader = torch.utils.data.DataLoader(dataset, batch_size=64, shuffle=True)\n",
+    "test_dataset = MetricLearningDataset(dataset_dir + \"100k_gps_20161102_info.json\", grid2idx)\n",
+    "model = T3S(vocab_size=len(grid2idx) + 1).cuda()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "timer.tok(\"prepare data\")\n",
+    "# train_t3s(model, dataloader, optimizer, epochs=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 4, 3])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "a = torch.tensor([[1., 1., 1.],\n",
+    "            [2., 2., 2.],\n",
+    "            [3., 3., 3.],\n",
+    "            [4., 4., 4.]])\n",
+    "# a[:, None]\n",
+    "(a.unsqueeze(1)-a).shape\n",
+    "# torch.norm(a.unsqueeze(1)-a, dim=2, p=2)"
    ]
   }
  ],
