web almost done

--- a/test.ipynb
+++ b/test.ipynb
@@ -66,7 +66,7 @@
     "weight3 = np.load(\"model/grid_embedding_384_0.73.npy\")\n",
     "print(evaluate_grid2vec(model.input_embedding(), dataset, test_num=500))\n",
     "print(evaluate_grid2vec(weight2, dataset, test_num=500))\n",
-    "print(evaluate_grid2vec(weight3, dataset, test_num=500))"
+    "print(evaluate_grid2vec(weight3, dataset, test_num=500))\n"
    ]
   },
   {
