--- a/test.ipynb
+++ b/test.ipynb
@@ -14,22 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([], dtype=float64)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33189\n"
+     ]
     }
    ],
    "source": [
-    "np.array([])"
+    "str_grid2idx = json.load(open(\"data/str_grid2idx_300.json\"))\n",
+    "grid2idx = {eval(c): str_grid2idx[c] for c in list(str_grid2idx)}\n",
+    "print(len(grid2idx))"
    ]
   },
   {
