--- a/test.ipynb
+++ b/test.ipynb
@@ -83,6 +83,109 @@
     "print(evaluate_grid2vec(weight2, dataset, test_num=500))\n",
     "print(evaluate_grid2vec(weight3, dataset, test_num=500))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "lens = torch.randperm(4)+1\n",
+    "lens = torch.tensor([3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([False,  True, False,  True])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bo = torch.BoolTensor([True, False, True, False])\n",
+    "bo.logical_not()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.3172, 0.3270],\n",
+       "         [0.4699, 0.4881],\n",
+       "         [0.2954, 0.3724],\n",
+       "         [0.2112, 0.0182],\n",
+       "         [0.4585, 0.1890],\n",
+       "         [0.1512, 0.1992]],\n",
+       "\n",
+       "        [[0.1341, 0.2230],\n",
+       "         [0.8835, 0.2573],\n",
+       "         [0.4342, 0.7426],\n",
+       "         [0.3385, 0.4170],\n",
+       "         [0.7168, 0.0159],\n",
+       "         [0.6452, 0.2743]],\n",
+       "\n",
+       "        [[0.4336, 0.6928],\n",
+       "         [0.1176, 0.0459],\n",
+       "         [0.5240, 0.7527],\n",
+       "         [0.3664, 0.7035],\n",
+       "         [0.4894, 0.8480],\n",
+       "         [0.1411, 0.1016]]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = torch.rand(3,6,2) # bsz, seq_len, emb_dim\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.2112, 0.0182],\n",
+       "         [0.4585, 0.1890],\n",
+       "         [0.1512, 0.1992]],\n",
+       "\n",
+       "        [[0.3385, 0.4170],\n",
+       "         [0.7168, 0.0159],\n",
+       "         [0.6452, 0.2743]],\n",
+       "\n",
+       "        [[0.3664, 0.7035],\n",
+       "         [0.4894, 0.8480],\n",
+       "         [0.1411, 0.1016]]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[:,lens,:]"
+   ]
   }
  ],
  "metadata": {
