--- a/test.ipynb
+++ b/test.ipynb
@@ -172,6 +172,112 @@
     "b[bo<0.5] = 0\n",
     "b"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.3656, 0.5770, 0.1925, 0.4621],\n",
+       "         [0.7861, 0.5126, 0.3533, 0.5787],\n",
+       "         [0.8168, 0.3925, 0.0019, 0.0872]],\n",
+       "\n",
+       "        [[0.5088, 0.1916, 0.9303, 0.2539],\n",
+       "         [0.3263, 0.5938, 0.2128, 0.2347],\n",
+       "         [0.0312, 0.3207, 0.5367, 0.7347]],\n",
+       "\n",
+       "        [[0.2532, 0.4268, 0.5059, 0.6234],\n",
+       "         [0.5720, 0.7184, 0.8311, 0.8753],\n",
+       "         [0.6975, 0.0644, 0.3034, 0.6363]]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "a  = torch.rand(3,3,4)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.3656, 0.5770, 0.1925, 0.4621],\n",
+       "        [0.3263, 0.5938, 0.2128, 0.2347],\n",
+       "        [0.6975, 0.0644, 0.3034, 0.6363]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.diagonal(offset=0, dim1=0, dim2=1).transpose(0,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.7315, 0.7067],\n",
+       "        [0.7315, 1.0000, 0.8817],\n",
+       "        [0.7067, 0.8817, 1.0000]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from pytorch_metric_learning import distances\n",
+    "\n",
+    "\n",
+    "a = torch.rand(3,4)\n",
+    "dis_func = distances.DotProductSimilarity()\n",
+    "\n",
+    "dis_func(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.mean([0])"
+   ]
   }
  ],
  "metadata": {
