--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,35 @@
     "import time\n",
     "\n",
     "timer = Timer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_dict = json.load(open(\"data/gps_20161102_517_400_dataset_full.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dis_matrix = np.array(dataset_dict['dis_matrix'])\n",
+    "normalized_dis_matrix = (dis_matrix - np.min(dis_matrix)) / (np.max(dis_matrix) - np.min(dis_matrix))\n",
+    "dataset_dict['dis_matrix'] = normalized_dis_matrix.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dump(dataset_dict, open(\"data/gps_20161102_517_400_dataset_full.json\", 'w'))"
    ]
   },
   {
@@ -175,26 +204,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.3656, 0.5770, 0.1925, 0.4621],\n",
-       "         [0.7861, 0.5126, 0.3533, 0.5787],\n",
-       "         [0.8168, 0.3925, 0.0019, 0.0872]],\n",
+       "tensor([[[4., 4., 4., 4.],\n",
+       "         [4., 4., 4., 4.],\n",
+       "         [4., 4., 4., 4.]],\n",
        "\n",
-       "        [[0.5088, 0.1916, 0.9303, 0.2539],\n",
-       "         [0.3263, 0.5938, 0.2128, 0.2347],\n",
-       "         [0.0312, 0.3207, 0.5367, 0.7347]],\n",
+       "        [[4., 4., 4., 4.],\n",
+       "         [4., 4., 4., 4.],\n",
+       "         [4., 4., 4., 4.]],\n",
        "\n",
-       "        [[0.2532, 0.4268, 0.5059, 0.6234],\n",
-       "         [0.5720, 0.7184, 0.8311, 0.8753],\n",
-       "         [0.6975, 0.0644, 0.3034, 0.6363]]])"
+       "        [[4., 4., 4., 4.],\n",
+       "         [4., 4., 4., 4.],\n",
+       "         [4., 4., 4., 4.]]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,8 +231,8 @@
    "source": [
     "import torch\n",
     "\n",
-    "a  = torch.rand(3,3,4)\n",
-    "a"
+    "a  = torch.ones(3,3,4)*2\n",
+    "a**2"
    ]
   },
   {
@@ -255,28 +284,6 @@
     "dis_func = distances.DotProductSimilarity()\n",
     "\n",
     "dis_func(a)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "np.mean([0])"
    ]
   }
  ],
