--- a/test.ipynb
+++ b/test.ipynb
@@ -285,6 +285,33 @@
     "\n",
     "dis_func(a)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.0533553  0.06445982 ... 0.74407966 0.74407966 0.78554406]\n",
+      " [0.         0.04353949 0.06012968 ... 0.80820113 0.84277947 0.84320596]\n",
+      " [0.         0.06461813 0.06477849 ... 0.87721509 0.88568684 0.88593939]\n",
+      " ...\n",
+      " [0.         0.00290518 0.02272892 ... 0.91684223 0.91684223 0.94890173]\n",
+      " [0.         0.17282866 0.17412992 ... 0.78548297 0.79391543 0.79393005]\n",
+      " [0.         0.01912209 0.06474774 ... 0.88887097 0.88984141 0.89029782]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import numpy as np \n",
+    "dis_matrix = np.array(json.load(open(\"data/test/gps_20161101_507_400_dataset_full.json\"))['dis_matrix'])\n",
+    "dis_matrix = np.sort(dis_matrix, axis=1)\n",
+    "print(dis_matrix)"
+   ]
   }
  ],
  "metadata": {
