--- a/generate_dataset.ipynb
+++ b/generate_dataset.ipynb
@@ -251,7 +251,52 @@
       "301-0.36% done, 36.277s after read data start\n",
       "401-0.64% done, 38.826s after read data start\n",
       "501-1.0% done, 42.082s after read data start\n",
-      "601-1.44% done, 46.751s after read data start\n"
+      "601-1.44% done, 46.751s after read data start\n",
+      "701-1.96% done, 51.857s after read data start\n",
+      "801-2.56% done, 57.418s after read data start\n",
+      "901-3.24% done, 63.74s after read data start\n",
+      "1001-4.0% done, 70.765s after read data start\n",
+      "1101-4.84% done, 76.315s after read data start\n",
+      "1201-5.76% done, 84.788s after read data start\n",
+      "1301-6.76% done, 92.904s after read data start\n",
+      "1401-7.84% done, 101.925s after read data start\n",
+      "1501-8.99% done, 110.638s after read data start\n",
+      "1601-10.23% done, 120.424s after read data start\n",
+      "1701-11.55% done, 131.297s after read data start\n",
+      "1801-12.95% done, 141.804s after read data start\n",
+      "1901-14.43% done, 153.549s after read data start\n",
+      "2001-15.98% done, 166.605s after read data start\n",
+      "2101-17.62% done, 180.713s after read data start\n",
+      "2201-19.34% done, 194.809s after read data start\n",
+      "2301-21.14% done, 210.266s after read data start\n",
+      "2401-23.01% done, 226.05s after read data start\n",
+      "2501-24.97% done, 240.736s after read data start\n",
+      "2601-27.01% done, 256.779s after read data start\n",
+      "2701-29.12% done, 274.384s after read data start\n",
+      "2801-31.32% done, 292.424s after read data start\n",
+      "2901-33.6% done, 310.635s after read data start\n",
+      "3001-35.95% done, 329.93s after read data start\n",
+      "3101-38.39% done, 348.745s after read data start\n",
+      "3201-40.9% done, 371.257s after read data start\n",
+      "3301-43.5% done, 392.384s after read data start\n",
+      "3401-46.17% done, 416.586s after read data start\n",
+      "3501-48.93% done, 437.968s after read data start\n",
+      "3601-51.77% done, 460.973s after read data start\n",
+      "3701-54.68% done, 485.682s after read data start\n",
+      "3801-57.67% done, 511.91s after read data start\n",
+      "3901-60.75% done, 537.189s after read data start\n",
+      "4001-63.9% done, 564.113s after read data start\n",
+      "4101-67.14% done, 590.053s after read data start\n",
+      "4201-70.45% done, 618.689s after read data start\n",
+      "4301-73.85% done, 644.608s after read data start\n",
+      "4401-77.32% done, 674.869s after read data start\n",
+      "4501-80.87% done, 704.927s after read data start\n",
+      "4601-84.51% done, 737.109s after read data start\n",
+      "4701-88.22% done, 769.09s after read data start\n",
+      "4801-92.01% done, 802.661s after read data start\n",
+      "4901-95.89% done, 833.149s after read data start\n",
+      "5001-99.84% done, 866.433s after read data start\n",
+      "calculate distance done, 867.5s after read data start\n"
      ]
     }
    ],
@@ -287,23 +332,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "save done, 14.945s after read data start\n"
+      "save done, 916.643s after read data start\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "14.945235013961792"
+       "916.6428894996643"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
