--- a/test.ipynb
+++ b/test.ipynb
@@ -288,29 +288,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.         0.0533553  0.06445982 ... 0.74407966 0.74407966 0.78554406]\n",
-      " [0.         0.04353949 0.06012968 ... 0.80820113 0.84277947 0.84320596]\n",
-      " [0.         0.06461813 0.06477849 ... 0.87721509 0.88568684 0.88593939]\n",
-      " ...\n",
-      " [0.         0.00290518 0.02272892 ... 0.91684223 0.91684223 0.94890173]\n",
-      " [0.         0.17282866 0.17412992 ... 0.78548297 0.79391543 0.79393005]\n",
-      " [0.         0.01912209 0.06474774 ... 0.88887097 0.88984141 0.89029782]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0.33659969, 0.81546705, 0.64924477, 0.81081447, 0.80304954],\n",
+       "       [0.98269228, 0.13548416, 0.47641693, 0.79250316, 0.02977387],\n",
+       "       [0.57796189, 0.37658412, 0.00907734, 0.69878503, 0.41992168],\n",
+       "       [0.61743955, 0.37249438, 0.60834444, 0.59788522, 0.26219048],\n",
+       "       [0.22455229, 0.12179233, 0.59389029, 0.92962993, 0.02720963]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import json\n",
     "import numpy as np \n",
-    "dis_matrix = np.array(json.load(open(\"data/test/gps_20161101_507_400_dataset_full.json\"))['dis_matrix'])\n",
-    "dis_matrix = np.sort(dis_matrix, axis=1)\n",
-    "print(dis_matrix)"
+    "\n",
+    "a = np.random.rand(5,5)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a = [1,2,3,4]\n",
+    "b = [6,4,7,2]\n",
+    "c = [6,4,7,2]\n",
+    "d = [6,4,7,2]\n",
+    "\n",
+    "list.extend(a,b)"
    ]
   }
  ],
