--- a/generate_dataset.ipynb
+++ b/generate_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,16 +34,16 @@
      "output_type": "stream",
      "text": [
       "read data start\n",
-      "read data/full/gps_20161101 done, 1.309s after read data start\n"
+      "read data/full/gps_20161101 done, 1.293s after read data start\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1.3099353313446045"
+       "1.2933611869812012"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,24 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load dictdata/str_grid2idx_400_44612.json done, 1.858s after read data start\n",
-      "group-apply done, 123.807s after read data start\n"
+      "load dictdata/str_grid2idx_400_44612.json done, 7.918s after read data start\n",
+      "group-apply done, 109.802s after read data start\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "123.80706405639648"
+       "109.80250597000122"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,6 +148,15 @@
     "res = Parallel(n_jobs=44)(delayed(group_concat)(group)for name, group in df.groupby(\"id\"))\n",
     "df = pd.DataFrame(res)\n",
     "timer.tok(\"group-apply\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['origin_trajs'].head()"
    ]
   },
   {
